# mkdocs-semantic-search

./: README.md  plugin.py  pyproject.toml
mkdocs_semantic_search/: config.py  generate_embeddings.js  plugin.py
mkdocs_semantic_search/static/css/: semantic-search.css
mkdocs_semantic_search/static/js/: semantic-search.js
