[tool.poetry]
name = "mkdocs-semantic-search"
version = "0.1.0"
description = "MkDocs plugin for semantic search using transformers.js"
authors = ["Nigel Harsch nigelharsch@gmail.com"]
packages = [{ include = "mkdocs_semantic_search" }]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.5.0"

[tool.poetry.plugins."mkdocs.plugins"]
semantic_search = "mkdocs_semantic_search.plugin:SemanticSearchPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
